# z85

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  cmake.sh  z85.c  z85.h  z85.hpp
cpp/: z85.cpp
src/: CMakeLists.txt  z85_impl.cpp
test/: CMakeLists.txt  test.cpp
